fixed gap between project cards

--- a/portfolio-website/public/style.css
+++ b/portfolio-website/public/style.css
@@ -8,7 +8,7 @@ h4 {
 
 .section-header {
   margin-top: 10px;
-  /* margin-bottom: 10px; */
+  margin-bottom: 10px;
   text-align: center;
 }
 
